# Estate-Optimization-Engine

./: .env.example  .gitignore  Cargo.toml  README.md  main.rs
api/: contracts.rs  handler.rs
api/contracts/: document.rs  estate_documents.rs
api/http/: routes.rs
jurisdictions/: mod.rs
tests/: api_document_ingest_tests.rs  api_estate_document_analysis_tests.rs  api_http_tests.rs  mod.rs
web_backend/: mod.rs  routes.rs
