[package]
name = "estate-optimization-engine"
version = "0.1.0"
edition = "2021"
autotests = false

[[bin]]
name = "estate-optimization-engine"
path = "main.rs"

[dependencies]
axum = "0.8.1"
tokio = { version = "1.44.0", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
base64 = "0.22.1"
csv = "1.3.1"
dotenvy = "0.15.7"
lopdf = "0.35.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "postgres"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
zip = { version = "2.4.2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
